# PR-OPRF

./: .gitignore  CMakeLists.txt  LICENSE  README.md
KyberOT/: README.md
cmake/: gmp-config.cmake
emp-zk/: LICENSE
emp-zk/emp-vole/: spfss_sender.h
oprf/: gmp-oprf.h  oprf.h
oprf/util/: gmp-fp.h  gmp-prg-fp.h  libot-pre.h  oprf-basevole.h  oprf-cope.h  oprf-fp.h  oprf-lpn.h  oprf-mpfss.h  oprf-spfss-recver.h  oprf-spfss-sender.h  oprf-vole-triple.h
setup/: setup.sh
test/: CMakeLists.txt
test/oprf/: comm_test.h  test_basevole.cpp  test_cope.cpp  test_halfmalicious_oprf.cpp  test_lpn.cpp  test_malicious_oprf.cpp  test_mpfss.cpp  test_oprf.cpp  test_optimization_para.cpp  test_pow.cpp  test_semihonest_oprf.cpp  test_single_halfmalicious_oprf.cpp  test_single_malicious_oprf.cpp  test_single_semihoset_oprf.cpp  test_spsfss.cpp  test_voletriple.cpp  try.cpp  trygmp.cpp
test/vole/: vole_triple.cpp
